syntax = "proto3";

option go_package = "genproto/mobile";

package mobile;

message Void{}

message ById{
    string id = 1;
}

message Filter{
    int32 page = 1;
}

message StafRes{
    string id = 1;
    string first_name = 2;
    string last_name = 3;
}